--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "angular-toggle-counterpart",
     "displayName": "Angular Toggle Counterpart Files",
     "description": "Toggle counterpart files on Angular",
-    "version": "0.1.2",
+    "version": "0.2.0",
     "publisher": "yanutetsu",
     "engines": {
         "vscode": "^1.5.0"
@@ -25,6 +25,10 @@
             {
                 "command": "extension.toggleCounterpartTesting",
                 "title": "Angular: Toggle Counterpart Files of Testing"
+            },
+            {
+                "command": "extension.toggleCounterpartThreeFiles",
+                "title": "Angular: Toggle Counterpart Files of Three"
             }
         ],
         "keybindings": [
