--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "angular-toggle-counterpart",
     "displayName": "Angular Toggle Counterpart Files",
     "description": "Toggle counterpart files on Angular",
-    "version": "0.4.1",
+    "version": "0.4.3",
     "publisher": "yanutetsu",
     "engines": {
         "vscode": "^1.5.0"
@@ -11,6 +11,7 @@
         "Languages",
         "Other"
     ],
+    "icon": "images/icon.png",
     "activationEvents": [
         "onLanguage:typescript",
         "onLanguage:html"
